--- a/app/assets/stylesheets/peek/views/alt_routes.css.scss
+++ b/app/assets/stylesheets/peek/views/alt_routes.css.scss
@@ -11,13 +11,12 @@
   label {
     border: 1px solid rgba(0, 0, 0, .8);
     border-radius: 3px;
-    box-shadow: inset 1px 1px 0 rgba(255,255,255,.2), 1px 1px 2px rgba(0,0,0,.25);
+    box-shadow: inset 1px 1px 0 rgba(255, 255, 255, .2), 1px 1px 2px rgba(0, 0, 0, .25);
     color: #fff;
     letter-spacing: 0.8px;
     padding: 5px 8px 5px 25px;
     position: relative;
     top: 1px;
-    transition: .1s;
     z-index: 1;
 
     &:hover {
@@ -28,6 +27,10 @@
 
   &.active label {
     background-color: rgba(0, 0, 0, .2);
-    box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 2px 2px rgba(0,0,0,.25);
+    box-shadow: 0 1px 0 rgba(255, 255, 255, .2), inset 0 2px 2px rgba(0, 0, 0, .25);
+
+    &:hover {
+      box-shadow: 0 0 4px rgba(255, 255, 255, .85);
+    }
   }
 }
